[project]
name = "asyncdiff_comfyui"
description = "AsyncDiff node for ComfyUI"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/SlackinJack/asyncdiff_comfyui"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "asyncdiff_comfyui"
Icon = ""
